<resources>
    <string name="app_name">Trello Clone</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_wait">please wait</string>
    <string name="please_click_back_again_to_exit" />
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email Address</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="image_contentDescription">image</string>

    <!--TODO (Step 9: All the string values are added here.)-->
    <!--START-->
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <!--END-->

    <!--TODO (Step 6: All dimen values are added here.)-->
    <!--START-->
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="about_us">About Us</string>
    <string name="chat_us">Chat Us</string>
    <!--END-->
</resources>