<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_in_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        >


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_title_text_size"
            android:paddingStart="100dp"
            android:paddingEnd="1dp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_sign_in_activity"
        android:paddingStart="17dp"
        android:paddingEnd="1dp"

        >

        <TextView
            android:id="@+id/welcomeBackTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="20dp" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linearLayout0"
        android:layout_marginTop="30dp"
        android:paddingStart="17dp"
        android:paddingEnd="20dp"
        >


        <TextView
            android:id="@+id/emailTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:text="@string/email"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorAccent"
            app:shapeAppearance="@style/Rounded"
            >


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email_login_real"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/et_text_size" />


        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/passwordTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:text="@string/password"
            android:layout_marginTop="30dp"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorAccent"
            app:shapeAppearance="@style/Rounded"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password_login_real"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textSize="@dimen/et_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgetYourPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="end"
            android:text="@string/forget_your_password"
            android:textColor="@color/gray"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_round_edges_stroke"
            android:fontFamily="@font/poppins_black"
            android:padding="5dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />



    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:id="@+id/noAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/gray"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="normal"
            android:paddingEnd="10dp"
            android:paddingStart="1dp"
            android:layout_weight="1"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>